@@ -13,6 +13,9 @@ For instructions on upgrading to newer versions, visit {mongoid.org}[http://mong
 
 * #710 Nested attributes accept both id and _id in hashes or arrays.
 
+* #1047 Ignore nil values passed to embeds_man pushes and substitution.
+  (Derick Bailey)
+
 == 2.1.1
 
 === Bug Fixes
